# rust-ctrlc

./: Cargo.toml
examples/: readme_example.rs  simple.rs
src/: lib.rs
