[package]

name = "ctrlc"
version = "1.1.1"
authors = ["Antti Keränen <detegr@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["ctrlc", "signal", "SIGINT"]
description = "Easy Ctrl-C handler for Rust projects"
documentation = "http://detegr.github.io/doc/ctrlc"
homepage = "https://github.com/Detegr/rust-ctrlc"
repository = "https://github.com/Detegr/rust-ctrlc.git"

[dependencies]
libc = {version="0.2",registry="susytech"}
winapi = {version="0.2",registry="susytech"}
kernel32-sys = {version="0.2",registry="susytech"}
